helloworldawt doesn't crash but doesn't display anything